<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_MealRater"
        android:title="@string/title_mealrater" />

    <item
        android:id="@+id/navigation_ContactApp"
        android:title="@string/title_contactapp" />

    <item
        android:id="@+id/navigation_ContractorCalculator"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_MyFinances"
        android:title="@string/title_myfinance" />
    <item
        android:id="@+id/navigation_HotSpots"
        android:title="@string/title_hotspots" />
    <item
        android:id="@+id/navigation_SuperMarketRater"
        android:title="@string/title_supermarkerrater" />
    <item
        android:id="@+id/navigation_ResterauntRater"
        android:title="@string/title_resterauntrater" />


</menu>